--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                   </div>
                   <div class="nine columns main-col">
                      <h2>About Me</h2>
-                     <p>I am self motivated IT Specialist, Tech Analuser and Problem Solver. I have always been fining my own ways to learn topics I am intersted in.
+                     <p>I am self motivated IT Specialist, Tech Analyser and Problem Solver. I have always been fining my own ways to learn topics I am intersted in.
                         I started self-learning c++ in high school and made my way through the journey of learning software development. There are a lot of things I don't know.
                         But I keep a potential to learn and gather knowledge the next day I need it. I love to take challenges.
                      </p>
